--- a/.github/workflows/MyFirstWorkFlow.yml
+++ b/.github/workflows/MyFirstWorkFlow.yml
@@ -20,9 +20,9 @@ on:
                 description: 'Apply tag after successfull test run'
                 required: true
                 type: boolean
-            enviroment:
+            environment:
                 description: 'Env to run tests against'
-                type: enviroment
+                type: environment
                 required: true
 # jobs:
 #     MyFirstJob:
